--- a/src/controller/tests/BUILD.gn
+++ b/src/controller/tests/BUILD.gn
@@ -57,10 +57,11 @@ chip_test_suite("tests") {
   }
 
   if (chip_support_commissioning_in_controller && chip_build_controller) {
-    test_sources += [
-      "TestAutoCommissioner.cpp",
-      "TestJCMCommissioner.cpp",
-    ]
+    test_sources += [ "TestAutoCommissioner.cpp" ]
+  }
+
+  if (chip_device_config_enable_joint_fabric) {
+    test_sources += [ "TestJCMCommissioner.cpp" ]
   }
 
   cflags = [ "-Wconversion" ]
@@ -69,9 +70,9 @@ chip_test_suite("tests") {
 
   public_deps = [
     "${chip_root}/src/app/common:cluster-objects",
+    "${chip_root}/src/app/server",
     "${chip_root}/src/app/tests:helpers",
     "${chip_root}/src/controller",
-    "${chip_root}/src/controller:jcm",
     "${chip_root}/src/lib/core:string-builder-adapters",
     "${chip_root}/src/lib/support:test_utils",
     "${chip_root}/src/lib/support:testing",
@@ -81,5 +82,12 @@ chip_test_suite("tests") {
 
   if (chip_device_platform != "mbed") {
     public_deps += [ "${chip_root}/src/controller/data_model" ]
+  }
+
+  if (chip_device_config_enable_joint_fabric) {
+    public_deps += [
+      "${chip_root}/src/app/server:joint_fabric",
+      "${chip_root}/src/controller:jcm",
+    ]
   }
 }
