--- a/src/platform/nxp/crypto/se05x/BUILD.gn
+++ b/src/platform/nxp/crypto/se05x/BUILD.gn
@@ -16,8 +16,8 @@ import("//build_overrides/chip.gni")
 import("//build_overrides/nlassert.gni")
 import("${chip_root}/build/chip/buildconfig_header.gni")
 import("${chip_root}/src/crypto/crypto.gni")
-import("${chip_root}/src/platform/nxp/crypto/se05x/args.gni")
 import("${chip_root}/src/platform/device.gni")
+import("${chip_root}/src/platform/nxp/crypto/se05x/args.gni")
 
 if (chip_crypto == "platform") {
   import("//build_overrides/mbedtls.gni")
@@ -35,22 +35,21 @@ static_library("nxp_crypto_lib") {
     "${chip_root}/src/platform/nxp/crypto/se05x/CHIPCryptoPAL_HostFallBack.cpp",
     "${chip_root}/src/platform/nxp/crypto/se05x/PersistentStorageOperationalKeystore_se05x.cpp",
   ]
-  if (chip_device_platform == "nxp") {
-    if (nxp_platform == "rt/rw61x"){
-      sources += [ "${chip_root}/examples/platform/nxp/se05x/DeviceAttestationSe05xCredsExample.cpp",
-                "${chip_root}/src/credentials/examples/ExampleDACs.h",
-                "${chip_root}/src/credentials/examples/ExamplePAI.h", ]
-    }
-  }
+    if (nxp_platform == "rt/rw61x") {
+      sources += [
+        "${chip_root}/examples/platform/nxp/se05x/DeviceAttestationSe05xCredsExample.cpp",
+        "${chip_root}/src/credentials/examples/ExampleDACs.h",
+        "${chip_root}/src/credentials/examples/ExamplePAI.h",
+      ]
+     }
 
   if (chip_device_platform == "nxp") {
-    if (nxp_platform == "rt/rw61x"){
+    if (nxp_platform == "rt/rw61x") {
       if (!nxp_external_sdk) {
         deps = [ "${chip_root}/${nxp_crypto_mw_root}:se05x" ]
       }
     }
-  }
-  else {
+  } else {
     deps = [ "${chip_root}/${nxp_crypto_mw_root}:se05x" ]
   }
 
