--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -376,7 +376,7 @@ jobs:
                     macos-14, # 14 - arm64
                     # macos-14-large, # 14 - x64 - no large runners
                     macos-15, # 15 - arm64
-                    macos-15-large # 15 - x64
+                    # macos-15-large # 15 - x64 - no large runners
                     ]
         env:
             BUILD_VARIANT: ${{matrix.build_variant}}
