disable macos-13-xlarge matrix items

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -372,7 +372,7 @@ jobs:
                 chip_tool: [""]
                 os: [
                     macos-13, # 13 - x64
-                    macos-13-xlarge, # 13 - arm64
+                    # macos-13-xlarge, # 13 - arm64 - no large runners
                     macos-14, # 14 - arm64
                     # macos-14-large, # 14 - x64 - no large runners
                     macos-15, # 15 - arm64
