--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -374,10 +374,13 @@ jobs:
                 include:
                     - os: macos-13
                       arch: x64     # observed, not configured
+                      dry-run: false
                     - os: macos-14
                       arch: arm64   # observed, not configured
+                      dry-run: true
                     - os: macos-15
                       arch: arm64   # observed, not configured
+                      dry-run: true
         env:
             BUILD_VARIANT: ${{matrix.build_variant}}
             CHIP_TOOL_VARIANT: ${{matrix.chip_tool}}
@@ -427,6 +430,7 @@ jobs:
                      "
 
             - name: Run Tests using the python parser sending commands to chip-tool
+              continue-on-error: ${{ matrix.dry-run }}
               run: |
                   ./scripts/run_in_build_env.sh \
                   "./scripts/tests/run_test_suite.py \
@@ -451,6 +455,7 @@ jobs:
                   "
 
             - name: Run purposeful failure tests using the python parser sending commands to chip-tool
+              continue-on-error: ${{ matrix.dry-run }}
               run: |
                   ./scripts/run_in_build_env.sh \
                   "./scripts/tests/run_test_suite.py \
