--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -529,92 +529,91 @@ jobs:
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-all-clusters-${BUILD_VARIANT}-tsan-clang-test:build
-                  build --copy-artifacts-to objdir-clone
-                  "
+                  build --copy-artifacts-to objdir-clone"
             # TODO: determine why some apps are tsan and some are not (and does that add runtime overhead? )
             - name: Build linux-x64-bridge
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-bridge-${BUILD_VARIANT}-tsan-clang-test:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-lock
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-lock-${BUILD_VARIANT}-tsan-clang-test:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-lit-icd
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-lit-icd-${BUILD_VARIANT}-tsan-clang-test:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-air-purifier
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-air-purifier-${BUILD_VARIANT}-tsan-clang-test:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-energy-gateway
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-energy-gateway-${BUILD_VARIANT}-tsan-clang-test:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-energy-management
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-energy-management-${BUILD_VARIANT}-tsan-clang-test:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-microwave-oven
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-microwave-oven-${BUILD_VARIANT}-tsan-clang-test:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-rvc
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-rvc-${BUILD_VARIANT}-tsan-clang-test:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-network-manager
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-network-manager-${BUILD_VARIANT}-tsan-clang-test:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-fabric-admin-rpc
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-fabric-admin-rpc-${BUILD_VARIANT}-clang:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-fabric-bridge-rpc
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-fabric-bridge-rpc-${BUILD_VARIANT}-clang:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-fabric-sync
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-fabric-sync-${BUILD_VARIANT}-clang:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             # TODO: camera app needs clang support
             - name: Build linux-x64-camera
@@ -622,21 +621,21 @@ jobs:
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-camera:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-camera-controller
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-camera-controller
-                  build --copy-artifacts-to objdir-clone:build
+                  build --copy-artifacts-to objdir-clone:build"
 
             - name: Build linux-x64-light-data-model-no-unique-id
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-light-data-model-no-unique-id-${BUILD_VARIANT}-clang:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             # TODO: T&C app needs variants (probably)
             - name: Build linux-x64-terms-and-conditions
@@ -644,14 +643,14 @@ jobs:
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-terms-and-conditions:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-python-bindings
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-python-bindings-webrtc:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             # TODO: JS admin app app needs variants (probably)
             - name: Build linux-x64-jf-control-app
@@ -659,7 +658,7 @@ jobs:
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-jf-control-app:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             # TODO: JF admin app app needs variants (probably)
             - name: Build linux-x64-jf-admin-app
@@ -667,14 +666,14 @@ jobs:
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-jf-admin-app:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Build linux-x64-closure-app
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --pw-command-launcher=ccache
                   --target linux-x64-closure-${BUILD_VARIANT}-tsan-clang-test:build
-                  build --copy-artifacts-to objdir-clone
+                  build --copy-artifacts-to objdir-clone"
 
             - name: Clean common build directory
               run: >-
