provide arch info to REPL tests; try running across OS versions

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -790,6 +790,14 @@ jobs:
         strategy:
             matrix:
                 build_variant: [no-ble-no-wifi-tsan-clang]
+                os: [macos-13, macos-14, macos-15]
+                include:
+                - os: macos-13
+                  arch: x64     # observed, not configured
+                - os: macos-14
+                  arch: arm64   # observed, not configured
+                - os: macos-15
+                  arch: arm64   # observed, not configured
         env:
             BUILD_VARIANT: ${{matrix.build_variant}}
             TSAN_OPTIONS: "halt_on_error=1"
