Updated by removing PICS in test-steps and Test case numbering has been updated

--- a/src/app/tests/suites/certification/Test_TC_AUDIOOUTPUT_7_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_AUDIOOUTPUT_7_2.yaml
@@ -12,10 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: 19.9.2. [TC-AUDIOOUTPUT-7.2] Rename Output Verification
+name: 19.9.1. [TC-AUDIOOUTPUT-7.2] Select Output Verification
 
 PICS:
     - AUDIOOUTPUT.S
+    - AUDIOOUTPUT.S.C00.Rsp
 
 config:
     nodeId: 0x12344321
@@ -34,60 +35,30 @@ tests:
               - name: "nodeId"
                 value: nodeId
 
-    - label: "Step 1: TH reads the OutputList attribute from the DUT"
-      PICS: AUDIOOUTPUT.S.A0000
+    - label: "Step 1: TH reads the OutputList attribute"
       command: "readAttribute"
       attribute: "OutputList"
       response:
-          saveAs: audioOutputListValues
           constraints:
               type: list
 
+    - label: "Step 2: TH reads the CurrentOutput attribute from the DUT"
+      command: "readAttribute"
+      attribute: "CurrentOutput"
+      response:
+          value: Index
+
     - label:
-          "Step 2: TH sends a RenameOutput command to the DUT with an index from
-          the list in step 1 and the name 'CertTest'"
-      PICS: AUDIOOUTPUT.S.C01.Rsp
-      command: "RenameOutput"
+          "Step 3: TH sends a SelectAudioOutput command to the DUT with an index
+          from the list in step 1"
+      command: "SelectOutput"
       arguments:
           values:
               - name: "Index"
                 value: Index
-              - name: "Name"
-                value: "CertTest"
 
-    #Disabled due to issue- #13029
-    - label:
-          "Step 3: TH reads the OutputList attribute from the DUT. Verify that
-          the output at the index provided in step 2 has the name CertTest"
-      verification: |
-          The TH commands for this test step can be invoked using chip-tool (when DUT is a commissionee) or tv-casting-app (when DUT is a commissioner):
-          ./chip-tool audiooutput read output-list 1 1
-          ./chip-tv-casting-app audiooutput read output-list 1 1
-
-          On TH(chip-tool),  Verify that the output at the index provided in step 2 has the name "CertTest".
-          [1651061821.366426][156898:156903] CHIP:TOO: Endpoint: 2 Cluster: 0x0000_050B Attribute 0x0000_0000 DataVersion: 372822880
-          [1651061821.366510][156898:156903] CHIP:TOO:   OutputList: 3 entries
-          [1651061821.366575][156898:156903] CHIP:TOO:     [1]: {
-          [1651061821.366603][156898:156903] CHIP:TOO:       Index: 1
-          [1651061821.366619][156898:156903] CHIP:TOO:       OutputType: 0
-          [1651061821.366635][156898:156903] CHIP:TOO:       Name: CertTest
-          [1651061821.366651][156898:156903] CHIP:TOO:      }
-          [1651061821.366675][156898:156903] CHIP:TOO:     [2]: {
-          [1651061821.366690][156898:156903] CHIP:TOO:       Index: 2
-          [1651061821.366705][156898:156903] CHIP:TOO:       OutputType: 0
-          [1651061821.366719][156898:156903] CHIP:TOO:       Name: HDMI
-          [1651061821.366734][156898:156903] CHIP:TOO:      }
-          [1651061821.366755][156898:156903] CHIP:TOO:     [3]: {
-          [1651061821.366770][156898:156903] CHIP:TOO:       Index: 3
-          [1651061821.366785][156898:156903] CHIP:TOO:       OutputType: 0
-          [1651061821.366799][156898:156903] CHIP:TOO:       Name: HDMI
-          [1651061821.366814][156898:156903] CHIP:TOO:      }
-      cluster: "LogCommands"
-      command: "UserPrompt"
-      PICS: PICS_USER_PROMPT && AUDIOOUTPUT.S.A0001 && AUDIOOUTPUT.S.C01.Rsp
-      arguments:
-          values:
-              - name: "message"
-                value: "Please enter 'y' for success"
-              - name: "expectedValue"
-                value: "y"
+    - label: "Step 4: TH reads the CurrentOutput attribute from the DUT"
+      command: "readAttribute"
+      attribute: "CurrentOutput"
+      response:
+          value: Index
