--- a/src/app/tests/suites/certification/Test_TC_AUDIOOUTPUT_7_4.yaml
+++ b/src/app/tests/suites/certification/Test_TC_AUDIOOUTPUT_7_4.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
-name: 19.9.4. [TC-AUDIOOUTPUT-7.4] Rename Output Verification (DUT as Client)
+name: 19.9.3. [TC-AUDIOOUTPUT-7.4] Select Output Verification (DUT as Client)
 
 PICS:
     - AUDIOOUTPUT.C
@@ -24,46 +24,45 @@ config:
     endpoint: 0
 
 tests:
-    - label: "Preconditions"
+    - label: "Preconditions:"
       verification: |
-          This test case is verified after the device is provisioned. Pls provision device first, Pass appropriate nodeID in the below command. In some cases, such as with a Casting Video Player, the TH commissions the DUT.
-          The test app should have one or more content apps available
+          Commission TH to DUT, if not done so already. In some cases, such as with a Casting Video Player, the TH commissions the DUT.
       disabled: true
 
-    - label: "Step 1: DUT sends RenameOutput command to TH"
-      PICS: AUDIOOUTPUT.C.C01.Tx
+    - label: "Step 1: DUT sends SelectOutput command to TH"
+      PICS: AUDIOOUTPUT.C.C00.Tx
       verification: |
           Product maker needs to provide instructions for how to trigger the command on the DUT. For comparison, the DUT behavior for this test step can be simulated using chip-tool (when DUT is a commissioner) or tv-casting-app (when DUT is a commissionee):
 
-          ./chip-tool audiooutput rename-output 1 'Kitchen Speakers' 1 1
-          ./chip-tv-casting-app audiooutput rename-output 1 'Kitchen Speakers' 1 1
+          ./chip-tool audiooutput select-output 1 1 1
+          ./chip-tv-casting-app audiooutput select-output 1 1 1
 
-          On TH (tv-app), Verify the  rename output command is received successfully.
 
-          [1658531363038] [21924:323905] CHIP: [DMG] InvokeRequestMessage =
-          [1658531363038] [21924:323905] CHIP: [DMG] {
-          [1658531363038] [21924:323905] CHIP: [DMG]         suppressResponse = false,
-          [1658531363038] [21924:323905] CHIP: [DMG]         timedRequest = false,
-          [1658531363038] [21924:323905] CHIP: [DMG]         InvokeRequests =
-          [1658531363038] [21924:323905] CHIP: [DMG]         [
-          [1658531363038] [21924:323905] CHIP: [DMG]                 CommandDataIB =
-          [1658531363038] [21924:323905] CHIP: [DMG]                 {
-          [1658531363038] [21924:323905] CHIP: [DMG]                         CommandPathIB =
-          [1658531363038] [21924:323905] CHIP: [DMG]                         {
-          [1658531363038] [21924:323905] CHIP: [DMG]                                 EndpointId = 0x1,
-          [1658531363038] [21924:323905] CHIP: [DMG]                                 ClusterId = 0x50b,
-          [1658531363038] [21924:323905] CHIP: [DMG]                                 CommandId = 0x1,
-          [1658531363038] [21924:323905] CHIP: [DMG]                         },
-          [1658531363038] [21924:323905] CHIP: [DMG]
-          [1658531363038] [21924:323905] CHIP: [DMG]                         CommandFields =
-          [1658531363038] [21924:323905] CHIP: [DMG]                         {
-          [1658531363038] [21924:323905] CHIP: [DMG]                                 0x0 = 1,
-          [1658531363038] [21924:323905] CHIP: [DMG]                                 0x1 = "Kitchen Speakers",
-          [1658531363038] [21924:323905] CHIP: [DMG]                         },
-          [1658531363038] [21924:323905] CHIP: [DMG]                 },
-          [1658531363038] [21924:323905] CHIP: [DMG]
-          [1658531363038] [21924:323905] CHIP: [DMG]         ],
-          [1658531363038] [21924:323905] CHIP: [DMG]
-          [1658531363038] [21924:323905] CHIP: [DMG]         InteractionModelRevision = 1
-          [1658531363038] [21924:323905] CHIP: [DMG] },
+          The log below shows the resulting log on the TH (tv-app or all-clusters-app):
+
+          [1658531323969] [21924:323905] CHIP: [DMG] InvokeRequestMessage =
+          [1658531323969] [21924:323905] CHIP: [DMG] {
+          [1658531323969] [21924:323905] CHIP: [DMG]         suppressResponse = false,
+          [1658531323969] [21924:323905] CHIP: [DMG]         timedRequest = false,
+          [1658531323969] [21924:323905] CHIP: [DMG]         InvokeRequests =
+          [1658531323969] [21924:323905] CHIP: [DMG]         [
+          [1658531323969] [21924:323905] CHIP: [DMG]                 CommandDataIB =
+          [1658531323969] [21924:323905] CHIP: [DMG]                 {
+          [1658531323969] [21924:323905] CHIP: [DMG]                         CommandPathIB =
+          [1658531323969] [21924:323905] CHIP: [DMG]                         {
+          [1658531323969] [21924:323905] CHIP: [DMG]                                 EndpointId = 0x1,
+          [1658531323969] [21924:323905] CHIP: [DMG]                                 ClusterId = 0x50b,
+          [1658531323969] [21924:323905] CHIP: [DMG]                                 CommandId = 0x0,
+          [1658531323969] [21924:323905] CHIP: [DMG]                         },
+          [1658531323969] [21924:323905] CHIP: [DMG]
+          [1658531323969] [21924:323905] CHIP: [DMG]                         CommandFields =
+          [1658531323969] [21924:323905] CHIP: [DMG]                         {
+          [1658531323969] [21924:323905] CHIP: [DMG]                                 0x0 = 1,
+          [1658531323969] [21924:323905] CHIP: [DMG]                         },
+          [1658531323969] [21924:323905] CHIP: [DMG]                 },
+          [1658531323969] [21924:323905] CHIP: [DMG]
+          [1658531323969] [21924:323905] CHIP: [DMG]         ],
+          [1658531323969] [21924:323905] CHIP: [DMG]
+          [1658531323969] [21924:323905] CHIP: [DMG]         InteractionModelRevision = 1
+          [1658531323969] [21924:323905] CHIP: [DMG] },
       disabled: true
