--- a/src/app/clusters/basic-information/BUILD.gn
+++ b/src/app/clusters/basic-information/BUILD.gn
@@ -22,6 +22,7 @@ source_set("basic-information") {
   public_deps = [
     "${chip_root}/src/app:constants",
     "${chip_root}/src/app:interaction-model",
+    "${chip_root}/src/app/server",
     "${chip_root}/src/app/server-cluster",
     "${chip_root}/src/platform",
     "${chip_root}/zzz_generated/app-common/clusters/BasicInformation",
